# shaders

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  JBCOM_CONTROL_CENTER_AGENT_USE.md  README.md  biome.json  commitlint.config.js  curator-report.json  package.json  pnpm-lock.yaml  pyproject.toml  sage-response.md  tsconfig.json  tsup.config.ts
.cursor/: mcp.json
.cursor/rules/: 00-fundamentals.mdc  01-pr-workflow.mdc  02-memory-bank.mdc  03-strata-3d.mdc  04-docs.mdc  05-architecture.mdc  ci.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: feature.yml
.github/agents/: README.md  code-reviewer.md  project-manager.md  test-runner.md
.github/metaprompts/: bolt.md  palette.md  scribe.md  sentinel.md  triage.md
.github/prompts/: assessment.md
.github/workflows/: ai-curator.yml  ai-delegator.yml  ai-fixer.yml  ai-reviewer.yml  auto-assign.yml  autoheal.yml  cd.yml  ci.yml  delegator.yml  deploy.yml  docs-deploy.yml  docs-push.yml  docs.yml  ecosystem-agents.yml  ecosystem-assessment.yml  ecosystem-connector.yml  ecosystem-control.yml  ecosystem-curator.yml  ecosystem-delegator.yml  ecosystem-fixer.yml  ecosystem-harvester.yml  ecosystem-reviewer.yml  ecosystem-surveyor.yml  (+6 more)
docs/: DESIGN-SYSTEM.md  DOMAIN-STANDARD.md  ECOSYSTEM.md  Makefile  README.md  conf.py
scripts/: ecosystem-curator.mjs  ecosystem-harvester.mjs
src/: chunks.ts  clouds.ts  fur.ts  godRays.ts  index.ts  instancing-wind.ts  raymarching.ts  sky.ts  terrain.ts  types.ts  volumetrics-components.ts  volumetrics.ts  water.ts
(+9 files in other folders)
