[project]
name = "strata-shaders-docs"
version = "1.0.0"
description = "Documentation for Strata Shaders"
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "tomli>=2.0.0",
]

[tool.uv]
managed = true
